# Aodcast

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md
docs/: configuration.md  tmp.md  (+1 more)
services/python-core/: README.md  pyproject.toml
services/python-core/app/: __init__.py  config.py  main.py  models_catalog.py
services/python-core/app/api/: __init__.py  bridge_envelope.py  http_runtime.py  serializers.py
services/python-core/app/cli/: __init__.py  parser.py
services/python-core/app/domain/: __init__.py  artifact.py  common.py  memory.py  project.py  provider_config.py  script.py  session.py  transcript.py  tts_config.py  voice_profile.py  voice_studio.py
services/python-core/tests/: http_contract_helpers.py  test_audio_rendering.py  test_bridge_request_state_schema.py  test_cli_bridge.py  test_cli_voice_studio.py  test_http_bridge_parity.py  test_http_browser_desktop_parity.py  test_http_runtime.py  test_http_runtime_security.py  test_http_runtime_smoke.py  test_interview_orchestrator.py  test_local_mlx_tts.py  test_long_task_state.py  test_memory_extraction.py  test_memory_maintenance.py  test_memory_prompt_plan.py  test_memory_retrieval.py  test_memory_script.py  test_memory_store.py  test_memory_worker.py  test_mlx_worker_client.py  test_models_catalog.py  test_project_store.py  test_prompt_plan.py  test_request_state_store.py  test_script_generation.py  test_script_page_source.py  test_script_prompt_plan.py  test_script_prompts.py  test_session_record.py  test_voice_profiles.py
(+168 files in other folders)
